[tool.poetry]
name = "obp"
version = "0.5.5"
description = "Open Bandit Pipeline: a python library for off-policy evaluation and learning"
authors = ["Yuta Saito <ys552@cornell.edu>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^23.11.0"}
isort = "5.12.0"

[tool.poetry.group.test.dependencies]
coverage = "7.3.1"
pytest = "7.4.0"
jupyter = ">=1.0.0"
pyarrow = "^14.0.2"
pympler = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
src_paths = ['obp', 'tests', 'examples', 'benchmark']
line_length = 88
lines_after_imports = 2
force_single_line = 'True'
force_sort_within_sections = 'True'
order_by_type = 'False'

[tool.pytest.ini_options]
addopts = "--color=yes"
